soulignage des textes importants

--- a/html/projets/infographie/infographie.html
+++ b/html/projets/infographie/infographie.html
@@ -28,8 +28,8 @@
     <br><br><br><br><br>
     <div class="row_simple">
         <div class="column_simple" id="half">
-            <p class="explication_text">En début d'année, nous avons eu un atelier d'infographie. Le but était de concevoir une couverture d'album pour le groupe de son choix. J'ai choisi Imagine Dragons et ai décidé de refaire la couverture de leur album "Origins". Pour ce projet,
-                nous devions utiliser Photoshop et Illustrator. J'ai d'abord réalisé l'illustration de ma cover (vidéo à droite), puis je l'ai adapté à des mockups.</p>
+            <p class="explication_text">En début d'année, nous avons eu un atelier d'infographie. Le but était de concevoir une <b>couverture d'album</b> pour le groupe de son choix. J'ai choisi Imagine Dragons et ai décidé de refaire la couverture de leur album "Origins". Pour
+                ce projet, nous devions utiliser <b>Photoshop et Illustrator</b>. J'ai d'abord réalisé l'illustration de ma cover (vidéo à droite), puis je l'ai adapté à des mockups.</p>
             <p class="explication_text">C'est un atelier que j'ai particulièrement apprécié puisque je réalisais déjà des illustrations du même type durant mon temps libre (voir : <a class="lien" href="../INDEX/photomontage.html">Photomontages</a>).</p>
         </div>
         <div class="column_space"></div>
