--- a/html/projets/jeux/1scratch.html
+++ b/html/projets/jeux/1scratch.html
@@ -23,10 +23,10 @@
 
     <div class="row_simple" id="start">
         <div class="column_simple" id="half">
-            <p class="explication_text">Voilà le premier gros projet que l'on a eu à faire en groupe au début du DUT MMI. Il fallait réaliser un jeu vidéo sur Scratch, un logiciel créé par le MIT pour rendre la programmation graphique et comprendre l'algorithmique. Nous étions quatre
-                par groupes et ne connaissions encore personne.</p>
-            <p class="explication_text">Après plusieurs heures de brainstorming nous avons décidé avec mon équipe de réaliser un jeu à la "Five Nights at Freddy's". Pour coller au thème qui était "Jamais 203", nous avons décidé de placer le joueur dans sa chambre d'hôtel n°203.
-                Là, il est capable de regarder à travers la ventilation, par la fenêtre et par l'oeillet de la porte. Le but est de survivre toute la nuit sans être attaqué par les monstres qui se rapprochent peu à peu. Pour cela le joueur a plusieurs
+            <p class="explication_text">Voilà le premier gros projet que l'on a eu à faire en groupe au début du <b>DUT MMI</b>. Il fallait réaliser un <b>jeu vidéo sur Scratch</b>, un logiciel créé par le MIT pour rendre la programmation graphique et comprendre l'algorithmique.
+                Nous étions quatre par groupes et ne connaissions encore personne.</p>
+            <p class="explication_text">Après plusieurs heures de brainstorming nous avons décidé avec mon équipe de réaliser un jeu à la <b>"Five Nights at Freddy's"</b>. Pour coller au thème qui était "Jamais 203", nous avons décidé de placer le joueur dans sa chambre d'hôtel
+                n°203. Là, il est capable de regarder à travers la ventilation, par la fenêtre et par l'oeillet de la porte. Le but est de survivre toute la nuit sans être attaqué par les monstres qui se rapprochent peu à peu. Pour cela le joueur a plusieurs
                 moyens de les repousser ou de les retenir.</p>
             <p class="explication_text">Le joueur dispose d'une télécommande qui lui permet de contrôler la ventilation (à droite au-dessus du lit) ou de verrouiller la porte (au fond de la pièce). Si la ventilation est en marche, le monstre est bloqué là-bas, si la porte est fermée
                 même chose. Le problème, c'est que pour réaliser ces deux actions, le joueur n'a qu'une quantité d'énergie limitée, une fois épuisée, la ventilation s'arrête et le verrou de la porte s'ouvre.</p>
@@ -47,9 +47,9 @@
             <p class="explication_text">Un autre moyen de les éloigner est de jeter des objets par la fenêtre. Cela fera descendre les monstres vers le parking de l'hôtel. Mais attention à ne pas trop abuser de cette technique, il se peut que les créatures finissent par trouver
                 d'où proviennent les sons.</p>
             <p class="explication_text">Bref, s'il veut survivre toute la nuit le joueur doit être intelligent dans sa gestion des ressources. Ça c'est le jeu mais côté création c'était comment ?</p>
-            <p class="explication_text">Personnellement je me suis occupée de toute la partie design du jeu. Pour l'apparence des monstres on a décidé de reprendre celle du Silence dans Doctor Who (une célèbre série de science-fiction britannique). Après quelques modifications sur
-                différents modèles nous avions les créatures dans plusieurs positions. J'ai réalisé toutes les scènes où se trouverait le joueur puis j'ai conçu des animations pour rendre le jeu plus immersif. Je me suis aussi beaucoup investi dans la
-                partie algorithmique de Scratch où j'ai simplifié la majorité du "code".
+            <p class="explication_text">Personnellement <b>je me suis occupée de toute la partie design du jeu</b>. Pour l'apparence des monstres on a décidé de reprendre celle du Silence dans Doctor Who (une célèbre série de science-fiction britannique). Après quelques modifications
+                sur différents modèles nous avions les créatures dans plusieurs positions. <b>J'ai réalisé toutes les scènes où se trouverait le joueur puis j'ai conçu des animations</b> pour rendre le jeu plus immersif. Je me suis aussi beaucoup investi
+                dans <b>la partie algorithmique de Scratch où j'ai simplifié la majorité du "code"</b>.
             </p>
         </div>
     </div>
