--- a/html/projets/jeux/2crystal.html
+++ b/html/projets/jeux/2crystal.html
@@ -21,11 +21,10 @@
 
     <div class="row_simple" id="start">
         <div class="column_simple" id="half">
-            <p class="explication_text">Le deuxième projet vidéoludique dont j'ai fait partie était également un atelier MMI. La consigne était de réaliser un "Zelda Like" en quelques jours sur Unity (moteur de Jeu). Nous étions par groupe de 5 cette fois-ci. Crystal's Quest est
-                un jeu post-apocalyptique où le héros peut voyager entre le présent en ruines et le passé encore intact ante-explosion. Le but est de retrouver les trois cristaux pour les ramener au professeur qui s'en servira pour annuler l'explosion
+            <p class="explication_text">Le deuxième projet vidéoludique dont j'ai fait partie était également un atelier MMI. La consigne était de réaliser un "Zelda Like" en quelques jours sur <b>Unity</b> (moteur de Jeu). Nous étions par groupe de 5 cette fois-ci. <b>Crystal's Quest               
+                est un jeu post-apocalyptique</b> où le héros peut voyager entre le présent en ruines et le passé encore intact ante-explosion. Le but est de retrouver les trois cristaux pour les ramener au professeur qui s'en servira pour annuler l'explosion
                 dans le futur.</p>
-            <p class="explication_text">Sur ce projet je me suis occupée de toute la programmation en C# (qui était assez réduite mais restait un obstacle comme nous n'avions jamais eu de cours sur ce langage). J'ai aussi pris en charge la partie Level Design et la conception du
-                menu et des paramètres qui l'accompagnent.</p>
+            <p class="explication_text">Sur ce projet <b> je me suis occupée</b> de toute la <b> programmation en C#</b> (qui était assez réduite mais restait un obstacle comme nous n'avions jamais eu de cours sur ce langage). J'ai aussi pris en charge la partie <b> Level Design</b>                et la <b> conception du menu et des paramètres</b> qui l'accompagnent.</p>
         </div>
         <div class="column_space"></div>
         <div class="column_simple" id="half">
