--- a/html/projets/jeux/3nanimo.html
+++ b/html/projets/jeux/3nanimo.html
@@ -23,13 +23,13 @@
     <br><br><br><br><br>
     <div class="row_simple" id="start ">
         <div class="column_simple" id="half ">
-            <p class="explication_text ">C'est fin Janvier 2021 que j'ai participé à ma première Game Jam. Le thème était "Lost And Found ". En équipe de cinq, en association avec deux élèves de l'INSERB, deux élèves en DUT MMI comme moi et un élève en licence pro Game Design / Level
-                Design (IUT Bobigny), nous avons décidé de réaliser un jeu de puzzle.</p>
+            <p class="explication_text ">C'est fin Janvier 2021 que j'ai participé à ma <b>première Game Jam</b>. Le thème était "Lost And Found ". En équipe de cinq, en association avec deux élèves de l'INSERB, deux élèves en DUT MMI comme moi et un élève en licence pro Game Design
+                / Level Design (IUT Bobigny), nous avons décidé de réaliser un <b>jeu de puzzle</b>.</p>
             <p class="explication_text ">Le but consiste à retrouver les animaux qui se sont échappés et à les remettre dans leurs enclos. Seulement tous les animaux ne s'entendent pas bien entre eux. Il faut donc composer chaque enclos avec soin pour éviter que la ferme ne devienne
                 un véritable chaos.
             </p>
-            <p class="explication_text ">Sur ce projet j'ai participé à la partie design (animation des animaux, design de leurs sprites si nécessaire) puis à la conception des menus (pause, options, menu principal, crédits, etc...). J'ai aussi participé à la création de prefabs
-                d'animaux sur Unity.
+            <p class="explication_text ">Sur ce projet <b>j'ai participé à la partie design</b> (animation des animaux, design de leurs sprites si nécessaire) puis à la <b>conception des menus</b> (pause, options, menu principal, crédits, etc...). J'ai aussi participé à la <b>création
+                de prefabs d'animaux sur Unity</b>.
             </p>
             <br><br>
             <p class="explication_text ">Voilà le superbe trailer du jeu réalisé par Pauline Grellier !
