--- a/html/projets/jeux/4twr.html
+++ b/html/projets/jeux/4twr.html
@@ -23,10 +23,10 @@
     <br><br><br><br><br>
     <div class="row_simple">
         <div class="column_simple" id="half">
-            <p class="explication_text">Ce nouveau jeu se centraît autour de la thématique de l'accessibilité. Le but : réaliser un jeu le plus accessible possible. Il fallait pouvoir jouer uniquement à l'oreille et/ou uniquement avec la vue et ne pas avoir de commandes trop complexes.
-                Avec mon équipe, nous avons décidé de faire une sorte de Subway Surfer en 2D.</p>
-            <p class="explication_text">Pour la première fois, j'ai effectué moi-même toute la programmation en C# sur le jeu. Je me suis aussi chargé du level design, et de toute la conception du jeu dans unity. Le reste de l'équipe s'est chargé de récupérer/concevoir toutes les
-                ressources, c'est à dire les éléments graphiques, les backgrounds du jeu (la route qui défile), l'héroïne Miraï </p>
+            <p class="explication_text">Ce nouveau jeu se centraît autour de la thématique de <b>l'accessibilité</b>. Le but : réaliser un jeu le plus accessible possible. Il fallait pouvoir jouer uniquement à l'oreille et/ou uniquement avec la vue et ne pas avoir de commandes trop
+                complexes. Avec mon équipe, nous avons décidé de faire une sorte de <b>Subway Surfer en 2D.</b></p>
+            <p class="explication_text">Pour la première fois, <b>j'ai effectué moi-même toute la programmation en C#</b> sur le jeu. Je me suis aussi chargé du <b>level design</b>, et de toute la conception du jeu dans unity. Le reste de l'équipe s'est chargé de récupérer/concevoir
+                toutes les ressources, c'est à dire les éléments graphiques, les backgrounds du jeu (la route qui défile), l'héroïne Miraï </p>
         </div>
         <div class="column_space"></div>
         <div class="column_simple">
