--- a/html/INDEX/video.html
+++ b/html/INDEX/video.html
@@ -24,7 +24,7 @@
 
     <div class="video_total">
         <div class="row_simple">
-            <iframe width="700" height="400px" class="video" src="https://www.youtube.com/embed/ozApC06xylI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="700" height="400px" class="video" src="https://www.youtube.com/embed/QNpvuNhBuz4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <div class="column_space"></div>
             <iframe width="700" height="400px" class="video" src="https://www.youtube.com/embed/XvsrA4PbQlI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
