--- a/html/presentation.html
+++ b/html/presentation.html
@@ -55,9 +55,23 @@
                 <img class="logo_comp" src="../RESSOURCES/logo/unity.png" width="10%">
                 <img class="logo_comp" src="../RESSOURCES/logo/blender.png" width="10%">
                 <img class="logo_comp" src="../RESSOURCES/logo/c4d.png" width="10%">
-                <img class="logo_comp" src="../RESSOURCES/logo/figma.svg" width="7%">
+                <img class="logo_comp" src="../RESSOURCES/logo/figma.svg" width="6%">
             </div>>
             <h2 class="present_middle_present">Soft skills :</h2>
+            <div class="row_simple left line_logo">
+                <div class="column_simple">
+                    <img class="logo_comp skill_logo" src="../RESSOURCES/logo/problem.png" width="30%">
+                    <p class="name_skill">Résolution de problème</p>
+                </div>
+                <div class="column_simple">
+                    <img class="logo_comp skill_logo" src="../RESSOURCES/logo/idea.png" width="30%">
+                    <p class="name_skill">Créativité</p>
+                </div>
+                <div class="column_simple">
+                    <img class="logo_comp skill_logo" src="../RESSOURCES/logo/adaptive.png" width="30%">
+                    <p class="name_skill">Flexibilité</p>
+                </div>
+            </div>
         </div>
 
     </div>
