ajout certifications et langages de programmation

--- a/html/presentation.html
+++ b/html/presentation.html
@@ -38,6 +38,10 @@
             <h2 class="present_middle_present">Contact :</h2>
             <p class="explication_text_present">Pour toute demande vous pouvez me contacter à l'adresse mail : <a class="lien" href="mailto:alvinadr24@gmail.com">alvinadr24@gmail.com</a>.
             </p>
+            <br>
+            <h2 class="present_middle_present">Certifications : </h2>
+            <p class="explication_text_present">Google Ateliers Numériques : 30/09/2020 - <b>Fondamentaux du Marketing Numérique</b>
+            </p>
         </div>
         <div class="column_simple column_space"></div>
         <div class="column_simple" id="half">
@@ -56,7 +60,8 @@
                 <img class="logo_comp" src="../RESSOURCES/logo/blender.png" width="10%">
                 <img class="logo_comp" src="../RESSOURCES/logo/c4d.png" width="10%">
                 <img class="logo_comp" src="../RESSOURCES/logo/figma.svg" width="6%">
-            </div>>
+            </div>
+            <br>
             <h2 class="present_middle_present">Soft skills :</h2>
             <div class="row_simple left line_logo">
                 <div class="column_simple">
@@ -71,6 +76,13 @@
                     <img class="logo_comp skill_logo" src="../RESSOURCES/logo/adaptive.png" width="30%">
                     <p class="name_skill">Flexibilité</p>
                 </div>
+            </div>
+            <br>
+            <h2 class="present_middle_present">Langages maîtrisés :</h2>
+            <div class="row_simple left line_logo">
+                <img class="logo_comp" src="../RESSOURCES/logo/html-5.png" width="10%">
+                <img class="logo_comp" src="../RESSOURCES/logo/css.png" width="10%">
+                <img class="logo_comp" src="../RESSOURCES/logo/c-logo.png" width="10%">
             </div>
         </div>
 
