ajout du lien de vérification

--- a/html/presentation.html
+++ b/html/presentation.html
@@ -42,6 +42,8 @@
             <h2 class="present_middle_present">Certifications : </h2>
             <p class="explication_text_present">Google Ateliers Numériques : 30/09/2020 - <b>Fondamentaux du Marketing Numérique</b>
             </p>
+            <p class="explication_text_present"> ▬ ID Certification : ZZS ZDK KCR --> <a class=" lien" href="https://learndigital.withgoogle.com/ateliersnumeriques/validate-certificate-code">Vérifier le certificat</a>
+            </p>
         </div>
         <div class="column_simple column_space"></div>
         <div class="column_simple" id="half">
