--- a/html/presentation.html
+++ b/html/presentation.html
@@ -33,7 +33,7 @@
                 jeu vidéo, 3D).
             </p>
             <div class="space"></div>
-            <a href="" class="btn_download" download="RESSOURCES/Alvina DR - CV.pdf">Télécharger mon CV</a>
+            <a href="" class="btn_download" href="../RESSOURCES/Alvina DR - CV.pdf" download="../RESSOURCES/Alvina DR - CV.pdf">Télécharger mon CV</a>
             <br>
             <h2 class="present_middle_present">Contact :</h2>
             <p class="explication_text_present">Pour toute demande vous pouvez me contacter à l'adresse mail : <a class="lien" href="mailto:alvinadr24@gmail.com">alvinadr24@gmail.com</a>.
