--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="icon.ico" />
-    <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Narration" />
     <meta name=”viewport” content=”width=device-width, initial-scale=1>
+
+    <meta name="keywords" content="Alvina, DR, Damasio--Razafiarizaka">
+
+    <link rel="icon" href="icon.ico" />
+    <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Narration">
+
 
     <title>Alvina Damasio--Razafiarizaka | Portfolio</title>
 
     <link rel="stylesheet" href="css/style.css">
-
 
 </head>
 
