--- a/html/INDEX/3d.html
+++ b/html/INDEX/3d.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name=”viewport” content=”width=device-width, initial-scale=1>
+
     <link rel="icon" href="../../icon.ico" />
     <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
-    <meta name=”viewport” content=”width=device-width, initial-scale=1>
+
 
     <title>Alvina Damasio--Razafiarizaka | 3D</title>
 
@@ -28,7 +30,7 @@
     <div class="photomontage_total">
         <div class="row_simple">
             <div class="lien_photomontage">
-                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Nasa Milk 1.jpg" />
+                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Nasa Milk 1.jpg" alt="Rendu 3D d'une bouteille de lait de la marque Nasa colori rouge." />
             </div>
             <div class="lien_photomontage">
                 <iframe class="photomontage_image" height="350vh" src="https://www.youtube.com/embed/zMBFy5agYKg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -36,36 +38,31 @@
         </div>
         <div class="row_simple">
             <div class="lien_photomontage">
-                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Araignée.jpg" />
+                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Araignée.jpg" alt="Rendu 3D d'une araignée en dessous d'un canapé." />
             </div>
             <div class="lien_photomontage">
-                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Voiture.jpg" />
-            </div>
-        </div>
-        <div class="row_simple">
-            <div class="lien_photomontage">
-                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Nasa Milk 2.jpg" />
-            </div>
-            <div class="lien_photomontage">
-                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Old.jpg" />
+                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Voiture.jpg" alt="Rendu 3D d'une voiture de sport rouge." />
             </div>
         </div>
         <div class="row_simple">
             <div class="lien_photomontage">
-                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Tardis.jpg" />
+                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Nasa Milk 2.jpg" alt="Rendu 3D d'une bouteille de lait de la marque Nasa colori bleu." />
             </div>
             <div class="lien_photomontage">
-                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Chambre.jpg" />
+                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Old.jpg" alt="Rendu 3D d'un vieux salon." />
+            </div>
+        </div>
+        <div class="row_simple">
+            <div class="lien_photomontage">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Tardis.jpg" alt="Rendu 3D du TARDIS de Doctor Who." />
+            </div>
+            <div class="lien_photomontage">
+                <img class="photomontage_image" src="../../RESSOURCES/0 - 3D/Chambre.jpg" alt="Rendu 3D d'une chambre." />
             </div>
         </div>
         <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
         <iframe class="include" src="../0commons/footer.html" seamless></iframe>
-        <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
-        <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-        <script src="../../js/navbar.js"></script>
-        <!--------------------------------------------------------------------------------------------------------------->
-
 </body>
 
 </html>
