--- a/html/INDEX/jeu_video.html
+++ b/html/INDEX/jeu_video.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name=”viewport” content=”width=device-width, initial-scale=1>
+
     <link rel="icon" href="../../icon.ico" />
     <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
-    <meta name=”viewport” content=”width=device-width, initial-scale=1>
+
 
     <title>Alvina Damasio--Razafiarizaka | Jeu vidéo</title>
 
@@ -28,16 +30,16 @@
 
     <div class="jeu_ligne_case">
         <a class="dut_projet" href="../../html/projets/jeux/4twr.html">
-            <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Those Who Remain.jpg" />
+            <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Those Who Remain.jpg" alt="Jaquette du jeu vidéo réalisé sur Unity Those Who Remain" />
         </a>
         <a class="dut_projet" href="../../html/projets/jeux/3nanimo.html">
-            <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Nanimo.jpg" />
+            <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Nanimo.jpg" alt="Jaquette du jeu vidéo réalisé en Game Jam Nanimo" />
         </a>
         <a class="dut_projet" href="../../html/projets/jeux/2crystal.html">
-            <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Cristal's quest.jpg" />
+            <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Cristal's quest.jpg" alt="Jaquette du jeu vidéo réalisé sur Unity Crystal's Quest." />
         </a>
         <a class="dut_projet" href="../../html/projets/jeux/1scratch.html">
-            <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Room 203.jpg" />
+            <img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Room 203.jpg" alt="Jaquette du jeu vidéo réalisé sur Scratch Room 203." />
         </a>
     </div>
     <div class="jeu_ligne_case">
@@ -46,11 +48,6 @@
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
     <iframe class="include" src="../0commons/footer.html" seamless></iframe>
-    <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
-    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-    <script src="../../js/navbar.js"></script>
-    <!--------------------------------------------------------------------------------------------------------------->
-
 </body>
 
 </html>
