--- a/html/INDEX/photographie.html
+++ b/html/INDEX/photographie.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name=”viewport” content=”width=device-width, initial-scale=1>
+
     <link rel="icon" href="../../icon.ico" />
     <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
-    <meta name=”viewport” content=”width=device-width, initial-scale=1>
+
 
     <title>Alvina Damasio--Razafiarizaka | Photographie</title>
 
@@ -26,12 +28,12 @@
     <div class="photomontage_total">
         <div class="row_simple">
             <div class="lien_photomontage">
-                <img class="photomontage_image" src="../../RESSOURCES/0 - Photographies/MMI BX/b1.jpg" alt="Photomontage d'un immense cerf blanc qui regarde deux fillettes perdues dans les montagnes." />
+                <img class="photomontage_image" src="../../RESSOURCES/0 - Photographies/MMI BX/b1.jpg" alt="Photographie de la marque de vêtements Université Bordeaux Montaigne." />
                 <p class="date_photomontage"><span class="contour"> | </span>MMI BX<span class="contour"> | </span></p>
                 <a class="lien_projet" href="../projets/photos/photo_mmibx.html">Voir le projet</a>
             </div>
             <div class="lien_photomontage">
-                <img class="photomontage_image" src="../../RESSOURCES/0 - Photographies/HOME/I16.jpg" alt="Photomontage sur le Petit Prince d'une île volante. Rose, renard, avion. Boîte." />
+                <img class="photomontage_image" src="../../RESSOURCES/0 - Photographies/HOME/I16.jpg" alt="Photographie d'une rainette vu de près." />
                 <p class="date_photomontage"><span class="contour"> | </span>HOME<span class="contour"> | </span></p>
                 <a class="lien_projet" href="../projets/photos/photo_home.html">Voir le projet</a>
             </div>
@@ -41,11 +43,6 @@
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
     <iframe class="include " src="../0commons/footer.html " seamless></iframe>
-    <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
-    <script src="https://kit.fontawesome.com/68b1f887b3.js " crossorigin="anonymous "></script>
-    <script src="../../js/navbar.js "></script>
-    <!--------------------------------------------------------------------------------------------------------------->
-
 </body>
 
 </html>
