--- a/html/INDEX/photomontage.html
+++ b/html/INDEX/photomontage.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name=”viewport” content=”width=device-width, initial-scale=1>
+
     <link rel="icon" href="../../icon.ico" />
     <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
-    <meta name=”viewport” content=”width=device-width, initial-scale=1>
+
 
     <title>Alvina Damasio--Razafiarizaka | Photomontage</title>
 
@@ -73,7 +75,7 @@
                 <p class="date_photomontage"><span class="contour"> | </span>Février 2017<span class="contour"> | </span></p>
             </a>
             <a class="lien_photomontage transparent">
-                <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P1.jpg" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie." />
+                <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P1.jpg" />
                 <p class="date_photomontage"><span class="contour"> | </span>Février 2017<span class="contour"> | </span></p>
             </a>
         </div>
@@ -81,11 +83,6 @@
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
     <iframe class="include" src="../0commons/footer.html" seamless></iframe>
-    <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
-    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-    <script src="../../js/navbar.js"></script>
-    <!--------------------------------------------------------------------------------------------------------------->
-
 </body>
 
 </html>
