--- a/html/INDEX/web.html
+++ b/html/INDEX/web.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name=”viewport” content=”width=device-width, initial-scale=1>
+
     <link rel="icon" href="../../icon.ico" />
     <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
-    <meta name=”viewport” content=”width=device-width, initial-scale=1>
+
 
     <title>Alvina Damasio--Razafiarizaka | Web</title>
 
@@ -24,22 +26,18 @@
 
     <div class="dut_ligne_case">
         <a class="dut_projet" href="../../html/TRAVAUX.html">
-            <img class="dut_projet_image" src="../../RESSOURCES/0 - Web/Musée d'Aquitaine.jpg" />
+            <img class="dut_projet_image" src="../../RESSOURCES/0 - Web/Musée d'Aquitaine.jpg" alt="Refonte du site web Musée d'Aquitaine" />
         </a>
         <a class="dut_projet" href="../../html/TRAVAUX.html">
-            <img class="dut_projet_image" src="../../RESSOURCES/0 - Web/Tech'art.jpg" />
+            <img class="dut_projet_image" src="../../RESSOURCES/0 - Web/Tech'art.jpg" alt="Maquette d'un site fictionnel Tech'art" />
         </a>
         <a class="dut_projet" href="../../html/TRAVAUX.html">
-            <img class="dut_projet_image" src="../../RESSOURCES/0 - Web/Portfolio.jpg" />
+            <img class="dut_projet_image" src="../../RESSOURCES/0 - Web/Portfolio.jpg" alt="Maquette du portfolio de Alvina DR" />
         </a>
     </div>
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
     <iframe class="include" src="../0commons/footer.html" seamless></iframe>
-    <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
-    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-    <!--------------------------------------------------------------------------------------------------------------->
-
 </body>
 
 </html>
