--- a/html/presentation.html
+++ b/html/presentation.html
@@ -3,16 +3,16 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="../icon.ico" />
-    <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
     <meta name=”viewport” content=”width=device-width, initial-scale=1>
 
-    <title>Alvina Damasio--Razafiarizaka | Présentation</title>
+    <link rel="icon" href="../icon.ico" />
+    <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
+
+
+    <title>Alvina Damasio--Razafiarizaka | À propos</title>
 
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/presentation.css">
-    <link rel="stylesheet" href="../css/flickity.css">
-
 </head>
 
 <body>
@@ -49,42 +49,42 @@
         <div class="column_simple" id="half">
             <h2 class="present_middle_present">Logiciels maîtrisés :</h2>
             <div class="row_simple left line_logo">
-                <img class="logo_comp" src="../RESSOURCES/logo/photoshop.png" width="10%">
-                <img class="logo_comp" src="../RESSOURCES/logo/illustrator.png" width="10%">
-                <img class="logo_comp" src="../RESSOURCES/logo/premiere pro.png" width="10%">
-                <img class="logo_comp" src="../RESSOURCES/logo/lightroom.png" width="10%">
-                <img class="logo_comp" src="../RESSOURCES/logo//after effects.png" width="10%">
+                <img class="logo_comp" src="../RESSOURCES/logo/photoshop.png" width="10%" alt="Logo de Adobe Photoshop">
+                <img class="logo_comp" src="../RESSOURCES/logo/illustrator.png" width="10%" alt="Logo de Adobe Illustrator">
+                <img class="logo_comp" src="../RESSOURCES/logo/premiere pro.png" width="10%" alt="Logo de Adobe Premiere Pro">
+                <img class="logo_comp" src="../RESSOURCES/logo/lightroom.png" width="10%" alt="Logo de Adobe Lightroom">
+                <img class="logo_comp" src="../RESSOURCES/logo//after effects.png" width="10%" alt="Logo de Adobe After Effects">
             </div>
             <br>
             <div class="row_simple left line_logo">
-                <img class="logo_comp" src="../RESSOURCES/logo/twinmotion.png" width="10%">
-                <img class="logo_comp" src="../RESSOURCES/logo/unity.png" width="10%">
-                <img class="logo_comp" src="../RESSOURCES/logo/blender.png" width="10%">
-                <img class="logo_comp" src="../RESSOURCES/logo/c4d.png" width="10%">
-                <img class="logo_comp" src="../RESSOURCES/logo/figma.svg" width="6%">
+                <img class="logo_comp" src="../RESSOURCES/logo/twinmotion.png" width="10%" alt="Logo de Twinmotion">
+                <img class="logo_comp" src="../RESSOURCES/logo/unity.png" width="10%" alt="Logo de Unity">
+                <img class="logo_comp" src="../RESSOURCES/logo/blender.png" width="10%" alt="Logo de Blender">
+                <img class="logo_comp" src="../RESSOURCES/logo/c4d.png" width="10%" alt="Logo de Cinéma 4D">
+                <img class="logo_comp" src="../RESSOURCES/logo/figma.svg" width="6%" alt="Logo de Figma">
             </div>
             <br>
             <h2 class="present_middle_present">Soft skills :</h2>
             <div class="row_simple left line_logo">
                 <div class="column_simple">
-                    <img class="logo_comp skill_logo" src="../RESSOURCES/logo/problem.png" width="30%">
+                    <img class="logo_comp skill_logo" src="../RESSOURCES/logo/problem.png" width="30%" alt="Icone résolution de problèmes">
                     <p class="name_skill">Résolution de problème</p>
                 </div>
                 <div class="column_simple">
-                    <img class="logo_comp skill_logo" src="../RESSOURCES/logo/idea.png" width="30%">
+                    <img class="logo_comp skill_logo" src="../RESSOURCES/logo/idea.png" width="30%" alt="Icone créativité">
                     <p class="name_skill">Créativité</p>
                 </div>
                 <div class="column_simple">
-                    <img class="logo_comp skill_logo" src="../RESSOURCES/logo/adaptive.png" width="30%">
+                    <img class="logo_comp skill_logo" src="../RESSOURCES/logo/adaptive.png" width="30%" alt="Icone flexibilité">
                     <p class="name_skill">Flexibilité</p>
                 </div>
             </div>
             <br>
             <h2 class="present_middle_present">Langages maîtrisés :</h2>
             <div class="row_simple left line_logo">
-                <img class="logo_comp" src="../RESSOURCES/logo/html-5.png" width="10%">
-                <img class="logo_comp" src="../RESSOURCES/logo/css.png" width="10%">
-                <img class="logo_comp" src="../RESSOURCES/logo/c-logo.png" width="10%">
+                <img class="logo_comp" src="../RESSOURCES/logo/html-5.png" width="10%" alt="Logo HTML5">
+                <img class="logo_comp" src="../RESSOURCES/logo/css.png" width="10%" alt="Logo CSS">
+                <img class="logo_comp" src="../RESSOURCES/logo/c-logo.png" width="10%" alt="Logo C#">
             </div>
         </div>
 
@@ -96,12 +96,6 @@
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
     <iframe class="include" src="0commons/footer.html" seamless></iframe>
-    <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
-    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="../js/flickity.pkgd.js"></script>
-    <!--------------------------------------------------------------------------------------------------------------->
-
 </body>
 
 </html>
