--- a/html/projets/infographie/infographie.html
+++ b/html/projets/infographie/infographie.html
@@ -3,13 +3,15 @@
 
 <head>
     <meta charset="utf-8" />
+    <meta name=”viewport” content=”width=device-width, initial-scale=1>
+
     <link rel="icon" href="../../../icon.ico" />
     <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
-    <meta name=”viewport” content=”width=device-width, initial-scale=1>
+
 
     <title>Alvina Damasio--Razafiarizaka | Cover d'album</title>
 
-    <link rel="stylesheet" href="../../../css/style.css" id="theme-link">
+    <link rel="stylesheet" href="../../../css/style.css">
     <link rel="stylesheet" href="../../../css/photomontage.css">
     <link rel="stylesheet" href="../../../css/dut mmi.css">
 
@@ -40,32 +42,32 @@
 
     <div class="row_simple">
         <a class="lien_photomontage">
-            <img class="photomontage_image" src="../../../RESSOURCES/1 - Infographie/RENDU 1.5.jpg" />
+            <img class="photomontage_image" src="../../../RESSOURCES/1 - Infographie/RENDU 1.5.jpg" alt="Mockup d'une cover fictif de l'album d'Imagine Dragons Origins ainsi que de son livret et." />
         </a>
         <a class="lien_photomontage">
-            <img class="photomontage_image" src="../../../RESSOURCES/1 - Infographie/RENDU 2.1.jpg" />
+            <img class="photomontage_image" src="../../../RESSOURCES/1 - Infographie/RENDU 2.1.jpg" alt="Mockup d'une pochette de vinyle fictive de l'album d'Imagine Dragons Origins." />
         </a>
         <a class="lien_photomontage">
-            <img class="photomontage_image" src="../../../RESSOURCES/1 - Infographie/RENDU 3.2.jpg" />
+            <img class="photomontage_image" src="../../../RESSOURCES/1 - Infographie/RENDU 3.2.jpg" alt="Mockup fictif de l'album d'Imagine Dragons Origins." />
         </a>
     </div>
     <div class="row_simple">
         <a class="lien_photomontage">
-            <img class="photomontage_image" src="../../../RESSOURCES/1 - Infographie/RENDU 4.1.jpg" />
+            <img class="photomontage_image" src="../../../RESSOURCES/1 - Infographie/RENDU 4.1.jpg" alt="Mockup de la boîte de CD fictive de l'album d'Imagine Dragons Origins." />
         </a>
         <a class="lien_photomontage">
-            <img class="photomontage_image" src="../../../RESSOURCES/1 - Infographie/RENDU 5.1.jpg" />
+            <img class="photomontage_image" src="../../../RESSOURCES/1 - Infographie/RENDU 5.1.jpg" alt="Mockup d'une pochette fictive de l'album d'Imagine Dragons Origins." />
         </a>
         <a class="lien_photomontage">
-            <img class="photomontage_image" src="../../../RESSOURCES/1 - Infographie/RENDU 6.1.jpg" />
+            <img class="photomontage_image" src="../../../RESSOURCES/1 - Infographie/RENDU 6.1.jpg" alt="Mockup de cassette fictive de l'album d'Imagine Dragons Origins." />
         </a>
     </div>
 
     <div class="dut_ligne_case">
-        <a class="dut_projet"> <img class="dut_projet_image" src="../../../RESSOURCES/1 - Infographie/COVER 1.1.jpg" /></a>
-        <a class="dut_projet"> <img class="dut_projet_image" src="../../../RESSOURCES/1 - Infographie/BACK COVER 1.2.jpg" /></a>
-        <a class="dut_projet"> <img class="dut_projet_image" src="../../../RESSOURCES/1 - Infographie/BOOKLET 1.1.png" /></a>
-        <a class="dut_projet"> <img class="dut_projet_image" src="../../../RESSOURCES/1 - Infographie/CD 1.3.png" /></a>
+        <a class="dut_projet"> <img class="dut_projet_image" src="../../../RESSOURCES/1 - Infographie/COVER 1.1.jpg" alt="Cover fictive de Origins réalisée sur Photoshop de l'album Origins d'Imagine Dragons" /></a>
+        <a class="dut_projet"> <img class="dut_projet_image" src="../../../RESSOURCES/1 - Infographie/BACK COVER 1.2.jpg" alt="Back cover fictive réalisée sur Photoshop de l'album Origins d'Imagine Dragons." /></a>
+        <a class="dut_projet"> <img class="dut_projet_image" src="../../../RESSOURCES/1 - Infographie/BOOKLET 1.1.png" alt="Booklet fictif réalisé sur Photoshop pour l'album Origins d'Imagine Dragons." /></a>
+        <a class="dut_projet"> <img class="dut_projet_image" src="../../../RESSOURCES/1 - Infographie/CD 1.3.png" alt="CD fictif réalisé sur Photoshop pour l'album Origins d'Imagine Dragons." /></a>
     </div>
 
     <br><br><br>
@@ -73,10 +75,6 @@
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
     <iframe class="include" src="../../0commons/footer.html" seamless></iframe>
-    <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
-    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-    <script src="../../../js/navbar.js"></script>
-    <!--------------------------------------------------------------------------------------------------------------->
 </body>
 
 </html>
