--- a/html/0commons/navbar.html
+++ b/html/0commons/navbar.html
@@ -8,7 +8,7 @@
 <body class="ft">
     <div class="navbar">
         <div class="haut">
-            <a class="icone" href="../../index.html" target="_parent"> <img src="../../RESSOURCES/a.png" width="100%" /></a>
+            <a class="icone" href="https:/alvina-dr.com" target="_parent"> <img src="../../RESSOURCES/a.png" width="100%" /></a>
             <h1 class="prénom">Alvina
                 <h1>
                     <h2 class="nom">Damasio--Razafiarizaka
@@ -17,7 +17,7 @@
         <nav>
             <div id="marker"></div>
             <!--SOULIGNEMENT-->
-            <li><a href="../../index.html" target="_parent">ACCUEIL</a></li>
+            <li><a href="https:/alvina-dr.com" target="_parent">ACCUEIL</a></li>
             <li><a href="../presentation.html" target="_parent">À PROPOS DE...</a></li>
         </nav>
     </div>
