--- a/html/presentation.html
+++ b/html/presentation.html
@@ -18,7 +18,7 @@
 <body>
     <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-    <iframe class="include fix" src="0commons/navbar.html" seamless></iframe>
+    <iframe class="include fix include_navbar" src="0commons/navbar.html" seamless></iframe>
     <!---------------------------------------------- TEXT PRESENTATION ------------------------------------------------>
 
     <div class="espace"></div>
