--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-    <iframe class="include fix" src="html/0commons/navbar.html" seamless></iframe>
+    <iframe class="include fix include_navbar" src="html/0commons/navbar.html" seamless></iframe>
     <!------------------------------------------------------ PROJETS ------------------------------------------------>
     <a href="#" class="bouton_remonter">▲</a>
     <div class="present_bande">
