--- a/html/INDEX/photographie.html
+++ b/html/INDEX/photographie.html
@@ -20,7 +20,7 @@
 <body>
     <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-    <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
+    <iframe class="include fix include_navbar" src="../0commons/navbar.html" seamless></iframe>
     <!--------------------------------------------------- PHOTOGRAPHIES ------------------------------------------------>
     <a href="#" class="bouton_remonter">▲</a>
 
