--- a/html/INDEX/photomontage.html
+++ b/html/INDEX/photomontage.html
@@ -18,7 +18,7 @@
 <body>
     <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-    <iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
+    <iframe class="include fix include_navbar" src="../0commons/navbar.html" seamless></iframe>
 
     <!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
     <a href="#" class="bouton_remonter">▲</a>
