--- a/html/projets/jeux/3nanimo.html
+++ b/html/projets/jeux/3nanimo.html
@@ -16,7 +16,7 @@
 <body>
     <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-    <iframe class="include fix " src="../../0commons/navbar.html " seamless></iframe>
+    <iframe class="include fix include_navbar" src="../../0commons/navbar.html " seamless></iframe>
     <!----------------------------------------------------------- ATELIER ------------------------------------------------------->
     <a href="# " class="bouton_remonter ">▲</a>
 
