correction animation portfolio

--- a/html/presentation.html
+++ b/html/presentation.html
@@ -49,19 +49,19 @@
         <div class="column_simple" id="half">
             <h2 class="present_middle_present">Logiciels maîtrisés :</h2>
             <div class="row_simple left line_logo">
-                <img class="logo_comp" src="../RESSOURCES/logo/photoshop.png" width="10%" alt="Logo de Adobe Photoshop">
-                <img class="logo_comp" src="../RESSOURCES/logo/illustrator.png" width="10%" alt="Logo de Adobe Illustrator">
-                <img class="logo_comp" src="../RESSOURCES/logo/premiere pro.png" width="10%" alt="Logo de Adobe Premiere Pro">
-                <img class="logo_comp" src="../RESSOURCES/logo/lightroom.png" width="10%" alt="Logo de Adobe Lightroom">
-                <img class="logo_comp" src="../RESSOURCES/logo//after effects.png" width="10%" alt="Logo de Adobe After Effects">
+                <img class="logo_comp adobe" src="../RESSOURCES/logo/photoshop.png" alt="Logo de Adobe Photoshop">
+                <img class="logo_comp adobe" src="../RESSOURCES/logo/illustrator.png" alt="Logo de Adobe Illustrator">
+                <img class="logo_comp adobe" src="../RESSOURCES/logo/premiere pro.png" alt="Logo de Adobe Premiere Pro">
+                <img class="logo_comp adobe" src="../RESSOURCES/logo/lightroom.png" alt="Logo de Adobe Lightroom">
+                <img class="logo_comp adobe" src="../RESSOURCES/logo//after effects.png" alt="Logo de Adobe After Effects">
             </div>
             <br>
             <div class="row_simple left line_logo">
-                <img class="logo_comp" src="../RESSOURCES/logo/twinmotion.png" width="10%" alt="Logo de Twinmotion">
-                <img class="logo_comp" src="../RESSOURCES/logo/unity.png" width="10%" alt="Logo de Unity">
-                <img class="logo_comp" src="../RESSOURCES/logo/blender.png" width="10%" alt="Logo de Blender">
-                <img class="logo_comp" src="../RESSOURCES/logo/c4d.png" width="10%" alt="Logo de Cinéma 4D">
-                <img class="logo_comp" src="../RESSOURCES/logo/figma.svg" width="6%" alt="Logo de Figma">
+                <img class="logo_comp adobe" src="../RESSOURCES/logo/twinmotion.png" alt="Logo de Twinmotion">
+                <img class="logo_comp adobe" src="../RESSOURCES/logo/unity.png" alt="Logo de Unity">
+                <img class="logo_comp adobe" src="../RESSOURCES/logo/blender.png" alt="Logo de Blender">
+                <img class="logo_comp adobe" src="../RESSOURCES/logo/c4d.png" alt="Logo de Cinéma 4D">
+                <img class="logo_comp figma" src="../RESSOURCES/logo/figma.svg" width="6%" alt="Logo de Figma">
             </div>
             <br>
             <h2 class="present_middle_present">Soft skills :</h2>
@@ -82,9 +82,9 @@
             <br>
             <h2 class="present_middle_present">Langages maîtrisés :</h2>
             <div class="row_simple left line_logo">
-                <img class="logo_comp" src="../RESSOURCES/logo/html-5.png" width="10%" alt="Logo HTML5">
-                <img class="logo_comp" src="../RESSOURCES/logo/css.png" width="10%" alt="Logo CSS">
-                <img class="logo_comp" src="../RESSOURCES/logo/c-logo.png" width="10%" alt="Logo C#">
+                <img class="logo_comp adobe" src="../RESSOURCES/logo/html-5.png" alt="Logo HTML5">
+                <img class="logo_comp adobe" src="../RESSOURCES/logo/css.png" alt="Logo CSS">
+                <img class="logo_comp adobe" src="../RESSOURCES/logo/c-logo.png" alt="Logo C#">
             </div>
         </div>
 
