change meta description

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Alvina, DR, Damasio--Razafiarizaka">
 
     <link rel="icon" href="icon.ico" />
-    <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme - Level Design - Narration">
+    <meta name="description" content="Alvina DR, jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne | Graphisme - Level Design - Narration">
 
 
     <title>Alvina Damasio--Razafiarizaka | Portfolio</title>
