--- a/html/INDEX/3d.html
+++ b/html/INDEX/3d.html
@@ -6,7 +6,7 @@
     <meta name=”viewport” content=”width=device-width, initial-scale=1>
 
     <link rel="icon" href="../../icon.ico" />
-    <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
+    <meta name="description" content="Découvrez les travaux en 3D de Alvina DR, de la modélisation sur cinéma 4D au rendu sur Twinmotion en passant par l'animation sur Blender." />
 
 
     <title>Alvina Damasio--Razafiarizaka | 3D</title>
