--- a/html/INDEX/jeu_video.html
+++ b/html/INDEX/jeu_video.html
@@ -6,7 +6,7 @@
     <meta name=”viewport” content=”width=device-width, initial-scale=1>
 
     <link rel="icon" href="../../icon.ico" />
-    <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
+    <meta name="description" content="Découvrez les jeux vidéos sur lesquels a travaillé Alvina DR." />
 
 
     <title>Alvina Damasio--Razafiarizaka | Jeu vidéo</title>
