--- a/html/INDEX/photomontage.html
+++ b/html/INDEX/photomontage.html
@@ -6,7 +6,7 @@
     <meta name=”viewport” content=”width=device-width, initial-scale=1>
 
     <link rel="icon" href="../../icon.ico" />
-    <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
+    <meta name="description" content="Venez voir des photomontages inspirés de la science fiction et du monde du cinéma, faits par Alvina DR." />
 
 
     <title>Alvina Damasio--Razafiarizaka | Photomontage</title>
