--- a/html/presentation.html
+++ b/html/presentation.html
@@ -6,7 +6,7 @@
     <meta name=”viewport” content=”width=device-width, initial-scale=1>
 
     <link rel="icon" href="../icon.ico" />
-    <meta name="description" content="Jeune étudiante en DUT Métiers du Multimédia et de l'Internet à Bordeaux Montaigne. Graphisme • Level Design • Photographie" />
+    <meta name="description" content="À propos d'Alvina DR, parcours, skills et CV." />
 
 
     <title>Alvina Damasio--Razafiarizaka | À propos</title>
