ajout certification bitdegree

--- a/html/presentation.html
+++ b/html/presentation.html
@@ -44,6 +44,12 @@
             </p>
             <p class="explication_text_present"> ▬ ID Certification : ZZS ZDK KCR --> <a class=" lien" href="https://learndigital.withgoogle.com/ateliersnumeriques/validate-certificate-code">Vérifier le certificat</a>
             </p>
+            <br>
+            <p class="explication_text_present">BitDegree : 29/04/2021 - <b>Apprendre la conception Web: Le guide ultime
+                pour les codeurs</b>
+            </p>
+            <p class="explication_text_present"> ▬ ID Certification : 3015309 --> <a class=" lien" href="https://www.bitdegree.org/user/alvina-damasio-razafiarizaka1005797/profile">Vérifier le certificat</a>
+            </p>
         </div>
         <div class="column_simple column_space"></div>
         <div class="column_simple" id="half">
