ajout lien souris

--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
             </ul>
         </section>
         <div class="move_mouse">
-            <a>
+            <a href="#start">
                 <section id="presentation" class="demo">
                     <!--Souris -->
-                    <a><span></span></a></a>
+                    <span></span></a>
             </section>
         </div>
     </div>
 
-    <div class="presentation_category">
+    <div class="presentation_category" id="start">
         <!--PRÉSENTATION DES DIFFÉRENTES CATÉGORIES DE TRAVAUX-->
 
         <div class="row_simple cadre_present">
