--- a/html/0commons/footer.html
+++ b/html/0commons/footer.html
@@ -1,6 +1,7 @@
 <head>
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="../../css/footer.css">
+    <title>footer</title>
 </head>
 
 <!------------------------------------------------------ FOOTER ------------------------------------------------>
