--- a/html/0commons/navbar.html
+++ b/html/0commons/navbar.html
@@ -1,6 +1,7 @@
 <head>
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="../../css/navbar.css">
+    <title>navbar</title>
 </head>
 
 <!--------------------------------------------------------- MENU ------------------------------------------------------>
