alt pour les liens à pictogramme

--- a/html/0commons/footer.html
+++ b/html/0commons/footer.html
@@ -13,9 +13,9 @@
             <section class="social_menu">
                 <!------------------ ICONES RÉSEAUX -->
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/alvina-dr" target="_parent"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="https://www.instagram.com/alvina.j.dr/" target="_parent"><i class="fa fa-instagram"></i></a></li>
-                    <li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA" target="_parent"><i class="fa fa-youtube"></i></a></li>
+                    <li><a href="https://www.linkedin.com/in/alvina-dr" target="_parent" alt="linkedin"><i class="fa fa-linkedin"></i></a></li>
+                    <li><a href="https://www.instagram.com/alvina.j.dr/" target="_parent" alt="instagram"><i class="fa fa-instagram"></i></a></li>
+                    <li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA" target="_parent" alt="youtube"><i class="fa fa-youtube"></i></a></li>
                 </ul>
             </section>
             <br>
