title header footer

--- a/html/INDEX/photomontage.html
+++ b/html/INDEX/photomontage.html
@@ -18,7 +18,7 @@
 <body>
     <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-    <iframe class="include fix include_navbar" src="../0commons/navbar.html" seamless></iframe>
+    <iframe title="navbar" class="include fix include_navbar" src="../0commons/navbar.html" seamless></iframe>
 
     <!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
     <a href="#" class="bouton_remonter">▲</a>
@@ -82,7 +82,7 @@
     </div>
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-    <iframe class="include" src="../0commons/footer.html" seamless></iframe>
+    <iframe title="Pied de page" class="include" src="../0commons/footer.html" seamless></iframe>
 </body>
 
 </html>
