--- a/html/TRAVAUX.html
+++ b/html/TRAVAUX.html
@@ -15,7 +15,7 @@
 <body>
     <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-    <iframe class="include fix include_navbar" src="0commons/navbar.html" seamless></iframe>
+    <iframe title="navbar" class="include fix include_navbar" src="0commons/navbar.html" seamless></iframe>
     <!---------------------------------------------- TEXT PRESENTATION ------------------------------------------------>
 
     <div class="presentation_dut_mmi_case">
@@ -24,7 +24,7 @@
 
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-    <iframe class="include" src="0commons/footer.html" seamless></iframe>
+    <iframe title="Pied de page" class="include" src="0commons/footer.html" seamless></iframe>
 </body>
 
 </html>
