--- a/html/projets/jeux/4twr.html
+++ b/html/projets/jeux/4twr.html
@@ -15,7 +15,7 @@
 <body>
     <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-    <iframe class="include fix include_navbar" src="../../0commons/navbar.html" seamless></iframe>
+    <iframe title="navbar" class="include fix include_navbar" src="../../0commons/navbar.html" seamless></iframe>
     <!----------------------------------------------------------- ATELIER ------------------------------------------------------->
     <a href="#" class="bouton_remonter">▲</a>
 
@@ -35,10 +35,7 @@
 
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-    <iframe class="include" src="../../0commons/footer.html" seamless></iframe>
-    <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
-    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-    <script src="../../../js/navbar.js"></script>
+    <iframe title="Pied de page" class="include" src="../../0commons/footer.html" seamless></iframe>
     <!--------------------------------------------------------------------------------------------------------------->
 </body>
 
