--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-    <iframe class="include fix include_navbar" src="html/0commons/navbar.html" seamless></iframe>
+    <iframe title="navbar" class="include fix include_navbar" src="html/0commons/navbar.html" seamless></iframe>
     <!------------------------------------------------------ PROJETS ------------------------------------------------>
     <a href="#" class="bouton_remonter">▲</a>
     <div class="present_bande">
@@ -178,7 +178,7 @@
     <br><br><br>
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-    <iframe class="include" src="html/0commons/footer.html" seamless></iframe>
+    <iframe title="Pied de page" class="include" src="html/0commons/footer.html" seamless></iframe>
     <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
 
     <script src="js/title.js"></script>
