--- a/html/INDEX/jeu_video.html
+++ b/html/INDEX/jeu_video.html
@@ -19,7 +19,7 @@
 <body>
     <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-    <iframe class="include fix include_navbar" src="../0commons/navbar.html" seamless></iframe>
+    <iframe title="navbar" class="include fix include_navbar" src="../0commons/navbar.html" seamless></iframe>
     <!------------------------------------------------------ JEU VIDEO ------------------------------------------------------>
     <a href="#" class="bouton_remonter">▲</a>
 
@@ -47,7 +47,7 @@
     </div>
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-    <iframe class="include" src="../0commons/footer.html" seamless></iframe>
+    <iframe title="Pied de page" class="include" src="../0commons/footer.html" seamless></iframe>
 </body>
 
 </html>
