--- a/html/INDEX/photographie.html
+++ b/html/INDEX/photographie.html
@@ -18,7 +18,7 @@
 <body>
     <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-    <iframe class="include fix include_navbar" src="../0commons/navbar.html" seamless></iframe>
+    <iframe title="navbar" class="include fix include_navbar" src="../0commons/navbar.html" seamless></iframe>
     <!--------------------------------------------------- PHOTOGRAPHIES ------------------------------------------------>
     <a href="#" class="bouton_remonter">▲</a>
 
@@ -40,7 +40,7 @@
     </div>
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-    <iframe class="include " src="../0commons/footer.html " seamless></iframe>
+    <iframe title="Pied de page" class="include " src="../0commons/footer.html " seamless></iframe>
 </body>
 
 </html>
