--- a/html/presentation.html
+++ b/html/presentation.html
@@ -18,7 +18,7 @@
 <body>
     <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-    <iframe class="include fix include_navbar" src="0commons/navbar.html" seamless></iframe>
+    <iframe title="navbar" class="include fix include_navbar" src="0commons/navbar.html" seamless></iframe>
     <!---------------------------------------------- TEXT PRESENTATION ------------------------------------------------>
 
     <div class="espace"></div>
@@ -101,7 +101,7 @@
 
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-    <iframe class="include" src="0commons/footer.html" seamless></iframe>
+    <iframe title="Pied de page" class="include" src="0commons/footer.html" seamless></iframe>
 </body>
 
 </html>
