--- a/html/projets/web/museum.html
+++ b/html/projets/web/museum.html
@@ -16,7 +16,7 @@
 <body>
     <!--------------------------------------------------------- MENU ------------------------------------------------------>
 
-    <iframe class="include fix include_navbar" src="../0commons/navbar.html" seamless></iframe>
+    <iframe title="navbar" class="include fix include_navbar" src="../0commons/navbar.html" seamless></iframe>
     <!----------------------------------------------------------- ATELIER ------------------------------------------------------->
     <a href="#" class="bouton_remonter">▲</a>
 
@@ -70,12 +70,7 @@
 
     <!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-    <iframe class="include" src="../0commons/footer.html" seamless></iframe>
-    <!------------------------------------------------------ SCRIPTS ------------------------------------------------>
-    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-    <script src="../../js/flickity.pkgd.js"></script>
-    <script src="../../js/navbar.js"></script>
+    <iframe title="Pied de page" class="include" src="../0commons/footer.html" seamless></iframe>
     <!--------------------------------------------------------------------------------------------------------------->
 </body>
 
