--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </ul>
         </section>
         <div class="move_mouse">
-            <a href="#start" alt="Voir les travaux">
+            <a href="#start" title="Voir les travaux">
                 <section id="presentation" class="demo">
                     <!--Souris -->
                     <span></span></a>
